--- a/template/ref.bib
+++ b/template/ref.bib
@@ -1,180 +1,73 @@
-@book{lee2003IntroductionToSmoothManifolds,
-  title={Introduction to Smooth Manifolds},
-  author={Lee, John M},
-  volume = {GTM218},
-  year={2003},
-  publisher={Springer}
+@book {Har77,
+    AUTHOR = {Hartshorne, Robin},
+     TITLE = {Algebraic geometry},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {No. 52},
+ PUBLISHER = {Springer-Verlag, New York-Heidelberg},
+      YEAR = {1977},
+     PAGES = {xvi+496},
+      ISBN = {0-387-90244-9},
+   MRCLASS = {14-01},
+  MRNUMBER = {463157},
+MRREVIEWER = {Robert\ Speiser},
 }
 
-@book{munkres2019Topology,
-  title={Topology},
-  author={Munkres, James R},
-  year={2019},
-  publisher={Pearson Education}
+@book {KM98,
+    AUTHOR = {Koll\'ar, J\'anos and Mori, Shigefumi},
+     TITLE = {Birational geometry of algebraic varieties},
+    SERIES = {Cambridge Tracts in Mathematics},
+    VOLUME = {134},
+      NOTE = {With the collaboration of C. H. Clemens and A. Corti,
+              Translated from the 1998 Japanese original},
+ PUBLISHER = {Cambridge University Press, Cambridge},
+      YEAR = {1998},
+     PAGES = {viii+254},
+      ISBN = {0-521-63277-3},
+   MRCLASS = {14E30},
+  MRNUMBER = {1658959},
+MRREVIEWER = {Mark\ Gross},
+       DOI = {10.1017/CBO9780511662560},
+       URL = {https://doi.org/10.1017/CBO9780511662560},
 }
 
-@book{guillemin2010DifferentialTopology,
-  title={Differential topology},
-  author={Guillemin, Victor and Pollack, Alan},
-  volume={370},
-  year={2010},
-  publisher={American Mathematical Soc.}
+@book {Laz04a,
+    AUTHOR = {Lazarsfeld, Robert},
+     TITLE = {Positivity in algebraic geometry. {I}},
+    SERIES = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A
+              Series of Modern Surveys in Mathematics [Results in
+              Mathematics and Related Areas. 3rd Series. A Series of Modern
+              Surveys in Mathematics]},
+    VOLUME = {48},
+      NOTE = {Classical setting: line bundles and linear series},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2004},
+     PAGES = {xviii+387},
+      ISBN = {3-540-22533-1},
+   MRCLASS = {14-02 (14C20)},
+  MRNUMBER = {2095471},
+MRREVIEWER = {Mihnea\ Popa},
+       DOI = {10.1007/978-3-642-18808-4},
+       URL = {https://doi.org/10.1007/978-3-642-18808-4},
 }
 
-@book{kirillov2008IntroductionToLieGroupAndLieAlgebra,
-  title={An introduction to Lie groups and Lie algebras},
-  author={Kirillov, Alexander A},
-  volume={113},
-  year={2008},
-  publisher={Cambridge University Press}
-}
-
-@book{ahlfors1979ComplexAnalysis,
-  title={Complex analysis},
-  author={Ahlfors, Lars V},
-  year={2022},
-  publisher = {McGraw-Hill Education and China Machine Press}
-}
-
-@book{zhu2005PartialDifferentialEquations,
-  author         = {朱长江， 邓引斌},
-  editor         = {},
-  publisher      = {北京: 科学出版社},
-  title          = {偏微分方程教程},
-  year           = {2005}
-}
-
-@book{farkas1992RiemannSurfaces,
-  author         = {H.M.Farkas, I.Kra.},
-  editor         = {},
-  volume         = {GTM71},
-  publisher      = {Springer},
-  title          = {Riemann Surfaces},
-  year           = {1992}
-}
-
-@book{lu1991RiemannSurfaces,
-  author         = {吕以辇，张学莲},
-  editor         = {},
-  publisher      = {科学出版社},
-  title          = {黎曼曲面},
-  year           = {1991}
-}
-
-@book{hungerford2012algebra,
-  title={Algebra},
-  author={ Thomas W. Hungerford},
-  volume={GTM73},
-  year={2012},
-  publisher={Springer Science \& Business Media}
-}
-
-@book{rotman2009homologicalAlgebra,
-  title={An introduction to homological algebra},
-  author={Joseph J. Rotman},
-  volume={2},
-  year={2009},
-  publisher={Springer}
-}
-
-@book{梅加强2013黎曼曲面导引,
-  title={黎曼曲面导引},
-  author={梅加强},
-  year={2013},
-  publisher={北京大学出版社}
-}
-
-@book{bott1982differential,
-  title={Differential forms in algebraic topology},
-  author={Bott, Raoul and Tu, Loring W and others},
-  volume={82},
-  year={1982},
-  publisher={Springer}
-}
-
-@book{do1992riemannian,
-  title={Riemannian geometry},
-  author={Do Carmo, Manfredo Perdigao and Flaherty Francis, J},
-  volume={6},
-  year={1992},
-  publisher={Springer}
-}
-
-@book{Har77,
-  title={Algebraic geometry},
-  author={Hartshorne, Robin},
-  volume={52},
-  year={2013},
-  publisher={Springer Science \& Business Media}
-}
-
-@book{alexandrino2015lie,
-  title={Lie groups and geometric aspects of isometric actions},
-  author={Alexandrino, Marcos M and Bettiol, Renato G and others},
-  volume={8},
-  year={2015},
-  publisher={Springer}
-}
-
-@book{atiyah1969CA,
-  author         = {M.F.Atiyah, I.G.MacDonald},
-  editor         = {},
-  publisher      = {},
-  title          = {Introduction to Commutative Algebra},
-  year           = {}
-}
-
-@unpublished{milne2020ANT,
-  author         = {Milne, James S.},
-  note           = {Available at \url{www.jmilne.org/math/}},
-  title          = {Algebraic Number Theory (v3.08)},
-  year           = {2020},
-}
-
-@book{gathmann2002AG,
-  author         = {Andreas Gathmann},
-  title          = {Algebraic Geometry},
-  booktitle      = {Notes for a class taught at the University of Kaiserslautern},
-  year           = {2002/2003}
-}
-
-@book{Liu02,
-  title={Algebraic geometry and arithmetic curves},
-  author={刘青},
-  volume={6},
-  year={2002},
-  publisher={Oxford Graduate Texts in Mathe}
-}
-
-@unpublished{JingrenChi2023ANT,
-  author = {Jingren Chi},
-  note   = {Available at \href{https://docs.qq.com/s/il3OruIQd6K7BgFoIDRieq}{腾讯文档共享}},
-  title  = {Algebraic Number Theory 2023 Summer School},
-  year   = {2023}
-}
-
-@unpublished{YeTian2019ANT,
-  author = {Ye Tian},
-  note   = {Available at \href{http://www.math.ac.cn/xshd/hyyzt/201902/W020191210557979308728.pdf}{Algebraic Number Theory-Summer School Notes}},
-  title  = {Algebraic Number Theory-Summer School Notes},
-  year   = {2019}
-}
-
-@book{washington2012introduction,
-  title={Introduction to cyclotomic fields},
-  author={Washington, Lawrence C},
-  volume={83},
-  year={2012},
-  publisher={Springer Science \& Business Media}
-}
-
-@article{KM98,
-  title={Birational geometry of algebraic varieties},
-  author={Koll{\'a}r, J{\'a}nos and Mori, Shigefumi},
-  journal={(No Title)},
-  volume={134},
-  year={1998},
-  publisher={Cambridge university press}
+@book {Laz04b,
+    AUTHOR = {Lazarsfeld, Robert},
+     TITLE = {Positivity in algebraic geometry. {II}},
+    SERIES = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A
+              Series of Modern Surveys in Mathematics [Results in
+              Mathematics and Related Areas. 3rd Series. A Series of Modern
+              Surveys in Mathematics]},
+    VOLUME = {49},
+      NOTE = {Positivity for vector bundles, and multiplier ideals},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2004},
+     PAGES = {xviii+385},
+      ISBN = {3-540-22534-X},
+   MRCLASS = {14-02 (14C20 14F05 14F17)},
+  MRNUMBER = {2095472},
+MRREVIEWER = {Mihnea\ Popa},
+       DOI = {10.1007/978-3-642-18808-4},
+       URL = {https://doi.org/10.1007/978-3-642-18808-4},
 }
 
 @book{Mat70,
