remove title page from section level

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -104,6 +104,7 @@
 \newcommand{\Tor}{\operatorname{Tor}}
 \newcommand{\Hom}{\operatorname{Hom}}
 \newcommand{\End}{\operatorname{End}}
+\newcommand{\Mor}{\operatorname{Mor}}
 \newcommand{\Mult}{\operatorname{Mult}}
 \renewcommand{\Im}{\operatorname{Im}}
 \newcommand{\Ker}{\operatorname{Ker}}
@@ -125,6 +126,7 @@
 \newcommand{\Nef}{\operatorname{Nef}}
 \newcommand{\Amp}{\operatorname{Amp}}
 \newcommand{\Bigcone}{\operatorname{Big}}
+\newcommand{\Frob}{\operatorname{Frob}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
