--- a/template/ref.bib
+++ b/template/ref.bib
@@ -1,3 +1,19 @@
+
+@book {Deb01,
+    AUTHOR = {Debarre, Olivier},
+     TITLE = {Higher-dimensional algebraic geometry},
+    SERIES = {Universitext},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {2001},
+     PAGES = {xiv+233},
+      ISBN = {0-387-95227-6},
+   MRCLASS = {14-02 (14E30 14Jxx)},
+  MRNUMBER = {1841091},
+MRREVIEWER = {Mark\ Gross},
+       DOI = {10.1007/978-1-4757-5406-3},
+       URL = {https://doi.org/10.1007/978-1-4757-5406-3},
+}
+
 @book {Har77,
     AUTHOR = {Hartshorne, Robin},
      TITLE = {Algebraic geometry},
@@ -28,6 +44,20 @@ MRREVIEWER = {Robert\ Speiser},
 MRREVIEWER = {Mark\ Gross},
        DOI = {10.1017/CBO9780511662560},
        URL = {https://doi.org/10.1017/CBO9780511662560},
+}
+
+@book{Kol96,
+    author = {Kollár, János},
+    title = {Rational Curves on Algebraic Varieties},
+    publisher = {Springer-Verlag},
+    address = {Berlin, Heidelberg},
+    year = {1996},
+    series = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge / A Series of Modern Surveys in Mathematics},
+    volume = {32},
+    pages = {320},
+    isbn = {978-3-540-60168-5},
+    doi = {10.1007/978-3-662-03276-3},
+    url = {https://doi.org/10.1007/978-3-662-03276-3}
 }
 
 @book {Laz04a,
