almost finish proof of rationality theorem

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -79,6 +79,7 @@
 \newcommand{\Ring}{\mathbf{Ring}}
 \newcommand{\Mod}{\mathbf{Mod}}
 \newcommand{\TopMod}{\mathbf{TopMod}}
+\newcommand{\Grp}{\mathbf{Grp}}
 
 
 \newcommand{\ten}{\otimes}
@@ -127,6 +128,7 @@
 \newcommand{\Amp}{\operatorname{Amp}}
 \newcommand{\Bigcone}{\operatorname{Big}}
 \newcommand{\Frob}{\operatorname{Frob}}
+\newcommand{\Bs}{\operatorname{Bs}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
