--- a/template/ref.bib
+++ b/template/ref.bib
@@ -28,6 +28,17 @@ MRREVIEWER = {Mark\ Gross},
 MRREVIEWER = {Robert\ Speiser},
 }
 
+@article{Kaw91,
+  title={On the length of an extremal rational curve},
+  author={Kawamata, Yujiro},
+  journal={Inventiones mathematicae},
+  volume={105},
+  number={1},
+  pages={609--611},
+  year={1991},
+  publisher={Springer}
+}
+
 @book {KM98,
     AUTHOR = {Koll\'ar, J\'anos and Mori, Shigefumi},
      TITLE = {Birational geometry of algebraic varieties},
@@ -106,4 +117,15 @@ MRREVIEWER = {Mihnea\ Popa},
   volume={120},
   year={1970},
   publisher={WA Benjamin New York}
+}
+
+@article{MM86,
+  title={A numerical criterion for uniruledness},
+  author={Miyaoka, Yoichi and Mori, Shigefumi},
+  journal={Annals of Mathematics},
+  volume={124},
+  number={1},
+  pages={65--69},
+  year={1986},
+  publisher={JSTOR}
 }
