modify the bat files

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -129,6 +129,7 @@
 \newcommand{\Bigcone}{\operatorname{Big}}
 \newcommand{\Frob}{\operatorname{Frob}}
 \newcommand{\Bs}{\operatorname{Bs}}
+\newcommand{\Stab}{\operatorname{Stab}}
 
 
 \newcommand{\mat}[4]{\left[ \begin{array}{cc}#1 &#2 \\ #3 &#4\end{array}\right]}
