working in algebraic space

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -55,9 +55,22 @@
 \newcommand{\frakp}{{\mathfrak{p}}}
 \newcommand{\frakQ}{{\mathfrak{Q}}}
 \newcommand{\frakq}{{\mathfrak{q}}}
+\newcommand{\frakR}{{\mathfrak{R}}}
+\newcommand{\fraks}{{\mathfrak{s}}}
+\newcommand{\frakt}{{\mathfrak{t}}}
+\newcommand{\fraku}{{\mathfrak{u}}}
+\newcommand{\frakv}{{\mathfrak{v}}}
+\newcommand{\frakw}{{\mathfrak{w}}}
+\newcommand{\frakX}{{\mathfrak{X}}}
+\newcommand{\frakx}{{\mathfrak{x}}}
+\newcommand{\fraky}{{\mathfrak{y}}}
+\newcommand{\frakz}{{\mathfrak{z}}}
 
 
 \newcommand{\rmN}{{\mathrm{N}}}
+
+
+\newcommand{\bfC}{{\mathbf{C}}}
 
 
 \newcommand{\kk}{{\mathsf{k}}}
@@ -73,6 +86,7 @@
 \renewcommand{\P}{\partial}
 
 
+\newcommand{\Set}{\mathbf{Set}}
 \newcommand{\Var}{\mathbf{Var}}
 \newcommand{\Sch}{\mathbf{Sch}}
 \newcommand{\Alg}{\mathbf{Alg}}
@@ -80,6 +94,11 @@
 \newcommand{\Mod}{\mathbf{Mod}}
 \newcommand{\TopMod}{\mathbf{TopMod}}
 \newcommand{\Grp}{\mathbf{Grp}}
+\newcommand{\Ab}{\mathbf{Ab}}
+\newcommand{\Top}{\mathbf{Top}}
+\newcommand{\Cat}{\mathbf{Cat}}
+\newcommand{\AlgSp}{\mathbf{AlgSp}}
+\newcommand{\Obj}{\operatorname{Obj}}
 
 
 \newcommand{\ten}{\otimes}
@@ -104,6 +123,7 @@
 \newcommand{\Ext}{\operatorname{Ext}}
 \newcommand{\Tor}{\operatorname{Tor}}
 \newcommand{\Hom}{\operatorname{Hom}}
+\newcommand{\Eq}{\operatorname{Eq}}
 \newcommand{\End}{\operatorname{End}}
 \newcommand{\Mor}{\operatorname{Mor}}
 \newcommand{\Mult}{\operatorname{Mult}}
