--- a/template/ref.bib
+++ b/template/ref.bib
@@ -1,4 +1,15 @@
 
+@article{Art70,
+  title={Algebraization of formal moduli: II. Existence of modifications},
+  author={Artin, Michael},
+  journal={Annals of Mathematics},
+  volume={91},
+  number={1},
+  pages={88--135},
+  year={1970},
+  publisher={JSTOR}
+}
+
 @book {Deb01,
     AUTHOR = {Debarre, Olivier},
      TITLE = {Higher-dimensional algebraic geometry},
@@ -12,6 +23,24 @@
 MRREVIEWER = {Mark\ Gross},
        DOI = {10.1007/978-1-4757-5406-3},
        URL = {https://doi.org/10.1007/978-1-4757-5406-3},
+}
+
+@book {FGA05,
+    AUTHOR = {Fantechi, Barbara and G\"ottsche, Lothar and Illusie, Luc and
+              Kleiman, Steven L. and Nitsure, Nitin and Vistoli, Angelo},
+     TITLE = {Fundamental algebraic geometry},
+    SERIES = {Mathematical Surveys and Monographs},
+    VOLUME = {123},
+      NOTE = {Grothendieck's FGA explained},
+ PUBLISHER = {American Mathematical Society, Providence, RI},
+      YEAR = {2005},
+     PAGES = {x+339},
+      ISBN = {0-8218-3541-6},
+   MRCLASS = {14-06 (14A15 14D15 14F20)},
+  MRNUMBER = {2222646},
+MRREVIEWER = {Liam\ O'Carroll},
+       DOI = {10.1090/surv/123},
+       URL = {https://doi.org/10.1090/surv/123},
 }
 
 @book {Har77,
@@ -37,6 +66,15 @@ MRREVIEWER = {Robert\ Speiser},
   pages={609--611},
   year={1991},
   publisher={Springer}
+}
+
+@article{Kee99,
+  title={Basepoint freeness for nef and big line bundles in positive characteristic},
+  author={Keel, Se{\'a}n},
+  journal={Annals of Mathematics},
+  pages={253--286},
+  year={1999},
+  publisher={JSTOR}
 }
 
 @book {KM98,
@@ -128,4 +166,11 @@ MRREVIEWER = {Mihnea\ Popa},
   pages={65--69},
   year={1986},
   publisher={JSTOR}
+}
+
+@misc{Stacks,
+    author = {Authors, The Stacks Project},
+    title = {Stacks Project},
+    url = {https://stacks.math.columbia.edu/},
+    label   = {Stacks}
 }
