before vanishing in mixed char

--- a/template/noteformyself.cls
+++ b/template/noteformyself.cls
@@ -68,6 +68,7 @@
 \RequirePackage[dvipsnames]{xcolor} % 颜色支持
 \RequirePackage[most]{tcolorbox} % 彩色盒子环境
 \RequirePackage{tikz}           % 矢量绘图
+\RequirePackage{tikz-cd}        % 交换图绘制
 \RequirePackage[all]{xy}        % 交换图绘制
 \RequirePackage{bbm}            % 黑板粗体数字
 \RequirePackage{enumitem}       % Required for custom labels
