--- a/template/ref.bib
+++ b/template/ref.bib
@@ -41,6 +41,7 @@ MRREVIEWER = {Mark\ Gross},
 MRREVIEWER = {Liam\ O'Carroll},
        DOI = {10.1090/surv/123},
        URL = {https://doi.org/10.1090/surv/123},
+     label = {FGA},
 }
 
 @book {Har77,
@@ -107,6 +108,17 @@ MRREVIEWER = {Mark\ Gross},
     isbn = {978-3-540-60168-5},
     doi = {10.1007/978-3-662-03276-3},
     url = {https://doi.org/10.1007/978-3-662-03276-3}
+}
+
+@book{Knu71,
+  author    = {Donald Knutson},
+  title     = {Algebraic Spaces},
+  series    = {Lecture Notes in Mathematics},
+  volume    = {203},
+  publisher = {Springer-Verlag},
+  year      = {1971},
+  address   = {Berlin, Heidelberg, New York},
+  isbn      = {978-3-540-05496-2}
 }
 
 @book {Laz04a,
