--- a/template/notation.tex
+++ b/template/notation.tex
@@ -1,13 +1,29 @@
 %一些常用的宏定义
 \newcommand{\bba}{{\mathbb{A}}}
+\newcommand{\bbb}{{\mathbb{B}}}
 \newcommand{\bbc}{{\mathbb{C}}}
 \newcommand{\bbd}{{\mathbb{D}}}
+\newcommand{\bbe}{{\mathbb{E}}}
 \newcommand{\bbf}{{\mathbb{F}}}
+\newcommand{\bbg}{{\mathbb{G}}}
 \newcommand{\bbh}{{\mathbb{H}}}
+\newcommand{\bbi}{{\mathbb{I}}}
+\newcommand{\bbj}{{\mathbb{J}}}
+\newcommand{\bbk}{{\mathbb{K}}}
+\newcommand{\bbl}{{\mathbb{L}}}
+\newcommand{\bbm}{{\mathbb{M}}}
 \newcommand{\bbn}{{\mathbb{N}}}
+\newcommand{\bbo}{{\mathbb{O}}}
 \newcommand{\bbp}{{\mathbb{P}}}
 \newcommand{\bbq}{{\mathbb{Q}}}
 \newcommand{\bbr}{{\mathbb{R}}}
+\newcommand{\bbs}{{\mathbb{S}}}
+\newcommand{\bbt}{{\mathbb{T}}}
+\newcommand{\bbu}{{\mathbb{U}}}
+\newcommand{\bbv}{{\mathbb{V}}}
+\newcommand{\bbw}{{\mathbb{W}}}
+\newcommand{\bbx}{{\mathbb{X}}}
+\newcommand{\bby}{{\mathbb{Y}}}
 \newcommand{\bbz}{{\mathbb{Z}}}
 
 
@@ -39,38 +55,219 @@
 \newcommand{\calz}{{\mathcal{Z}}}
 
 
+\newcommand{\frakA}{{\mathfrak{A}}}
 \newcommand{\fraka}{{\mathfrak{a}}}
+\newcommand{\frakB}{{\mathfrak{B}}}
 \newcommand{\frakb}{{\mathfrak{b}}}
+\newcommand{\frakC}{{\mathfrak{C}}}
 \newcommand{\frakc}{{\mathfrak{c}}}
+\newcommand{\frakD}{{\mathfrak{D}}}
 \newcommand{\frakd}{{\mathfrak{d}}}
+\newcommand{\frakE}{{\mathfrak{E}}}
 \newcommand{\frake}{{\mathfrak{e}}}
+\newcommand{\frakF}{{\mathfrak{F}}}
 \newcommand{\frakf}{{\mathfrak{f}}}
+\newcommand{\frakG}{{\mathfrak{G}}}
 \newcommand{\frakg}{{\mathfrak{g}}}
+\newcommand{\frakH}{{\mathfrak{H}}}
 \newcommand{\frakh}{{\mathfrak{h}}}
+\newcommand{\frakI}{{\mathfrak{I}}}
+\newcommand{\fraki}{{\mathfrak{i}}}
+\newcommand{\frakJ}{{\mathfrak{J}}}
+\newcommand{\frakj}{{\mathfrak{j}}}
+\newcommand{\frakK}{{\mathfrak{K}}}
+\newcommand{\frakk}{{\mathfrak{k}}}
+\newcommand{\frakL}{{\mathfrak{L}}}
+\newcommand{\frakl}{{\mathfrak{l}}}
 \newcommand{\frakM}{{\mathfrak{M}}}
 \newcommand{\frakm}{{\mathfrak{m}}}
 \newcommand{\frakN}{{\mathfrak{N}}}
 \newcommand{\frakn}{{\mathfrak{n}}}
+\newcommand{\frakO}{{\mathfrak{O}}}
+\newcommand{\frako}{{\mathfrak{o}}}
 \newcommand{\frakP}{{\mathfrak{P}}}
 \newcommand{\frakp}{{\mathfrak{p}}}
 \newcommand{\frakQ}{{\mathfrak{Q}}}
 \newcommand{\frakq}{{\mathfrak{q}}}
 \newcommand{\frakR}{{\mathfrak{R}}}
+\newcommand{\frakr}{{\mathfrak{r}}}
+\newcommand{\frakS}{{\mathfrak{S}}}
 \newcommand{\fraks}{{\mathfrak{s}}}
+\newcommand{\frakT}{{\mathfrak{T}}}
 \newcommand{\frakt}{{\mathfrak{t}}}
+\newcommand{\frakU}{{\mathfrak{U}}}
 \newcommand{\fraku}{{\mathfrak{u}}}
+\newcommand{\frakV}{{\mathfrak{V}}}
 \newcommand{\frakv}{{\mathfrak{v}}}
+\newcommand{\frakW}{{\mathfrak{W}}}
 \newcommand{\frakw}{{\mathfrak{w}}}
 \newcommand{\frakX}{{\mathfrak{X}}}
 \newcommand{\frakx}{{\mathfrak{x}}}
+\newcommand{\frakY}{{\mathfrak{Y}}}
 \newcommand{\fraky}{{\mathfrak{y}}}
+\newcommand{\frakZ}{{\mathfrak{Z}}}
 \newcommand{\frakz}{{\mathfrak{z}}}
 
 
+\newcommand{\rmA}{{\mathrm{A}}}
+\newcommand{\rma}{{\mathrm{a}}}
+\newcommand{\rmB}{{\mathrm{B}}}
+\newcommand{\rmb}{{\mathrm{b}}}
+\newcommand{\rmC}{{\mathrm{C}}}
+\newcommand{\rmc}{{\mathrm{c}}}
+\newcommand{\rmD}{{\mathrm{D}}}
+\newcommand{\rmd}{{\mathrm{d}}}
+\newcommand{\rmE}{{\mathrm{E}}}
+\newcommand{\rme}{{\mathrm{e}}}
+\newcommand{\rmF}{{\mathrm{F}}}
+\newcommand{\rmf}{{\mathrm{f}}}
+\newcommand{\rmG}{{\mathrm{G}}}
+\newcommand{\rmg}{{\mathrm{g}}}
+\newcommand{\rmH}{{\mathrm{H}}}
+\newcommand{\rmh}{{\mathrm{h}}}
+\newcommand{\rmI}{{\mathrm{I}}}
+\newcommand{\rmi}{{\mathrm{i}}}
+\newcommand{\rmJ}{{\mathrm{J}}}
+\newcommand{\rmj}{{\mathrm{j}}}
+\newcommand{\rmK}{{\mathrm{K}}}
+\newcommand{\rmk}{{\mathrm{k}}}
+\newcommand{\rmL}{{\mathrm{L}}}
+\newcommand{\rml}{{\mathrm{l}}}
+\newcommand{\rmM}{{\mathrm{M}}}
+\newcommand{\rmm}{{\mathrm{m}}}
 \newcommand{\rmN}{{\mathrm{N}}}
+\newcommand{\rmn}{{\mathrm{n}}}
+\newcommand{\rmO}{{\mathrm{O}}}
+\newcommand{\rmo}{{\mathrm{o}}}
+\newcommand{\rmP}{{\mathrm{P}}}
+\newcommand{\rmp}{{\mathrm{p}}}
+\newcommand{\rmQ}{{\mathrm{Q}}}
+\newcommand{\rmq}{{\mathrm{q}}}
+\newcommand{\rmR}{{\mathrm{R}}}
+\newcommand{\rmr}{{\mathrm{r}}}
+\newcommand{\rmS}{{\mathrm{S}}}
+\newcommand{\rms}{{\mathrm{s}}}
+\newcommand{\rmT}{{\mathrm{T}}}
+\newcommand{\rmt}{{\mathrm{t}}}
+\newcommand{\rmU}{{\mathrm{U}}}
+\newcommand{\rmu}{{\mathrm{u}}}
+\newcommand{\rmV}{{\mathrm{V}}}
+\newcommand{\rmv}{{\mathrm{v}}}
+\newcommand{\rmW}{{\mathrm{W}}}
+\newcommand{\rmw}{{\mathrm{w}}}
+\newcommand{\rmX}{{\mathrm{X}}}
+\newcommand{\rmx}{{\mathrm{x}}}
+\newcommand{\rmY}{{\mathrm{Y}}}
+\newcommand{\rmy}{{\mathrm{y}}}
+\newcommand{\rmZ}{{\mathrm{Z}}}
 
 
+\newcommand{\bfA}{{\mathbf{A}}}
+\newcommand{\bfa}{{\mathbf{a}}}
+\newcommand{\bfB}{{\mathbf{B}}}
+\newcommand{\bfb}{{\mathbf{b}}}
 \newcommand{\bfC}{{\mathbf{C}}}
+\newcommand{\bfc}{{\mathbf{c}}}
+\newcommand{\bfD}{{\mathbf{D}}}
+\newcommand{\bfd}{{\mathbf{d}}}
+\newcommand{\bfE}{{\mathbf{E}}}
+\newcommand{\bfe}{{\mathbf{e}}}
+\newcommand{\bfF}{{\mathbf{F}}}
+\newcommand{\bff}{{\mathbf{f}}}
+\newcommand{\bfG}{{\mathbf{G}}}
+\newcommand{\bfg}{{\mathbf{g}}}
+\newcommand{\bfH}{{\mathbf{H}}}
+\newcommand{\bfh}{{\mathbf{h}}}
+\newcommand{\bfI}{{\mathbf{I}}}
+\newcommand{\bfi}{{\mathbf{i}}}
+\newcommand{\bfJ}{{\mathbf{J}}}
+\newcommand{\bfj}{{\mathbf{j}}}
+\newcommand{\bfK}{{\mathbf{K}}}
+\newcommand{\bfk}{{\mathbf{k}}}
+\newcommand{\bfL}{{\mathbf{L}}}
+\newcommand{\bfl}{{\mathbf{l}}}
+\newcommand{\bfM}{{\mathbf{M}}}
+\newcommand{\bfm}{{\mathbf{m}}}
+\newcommand{\bfN}{{\mathbf{N}}}
+\newcommand{\bfn}{{\mathbf{n}}}
+\newcommand{\bfO}{{\mathbf{O}}}
+\newcommand{\bfo}{{\mathbf{o}}}
+\newcommand{\bfP}{{\mathbf{P}}}
+\newcommand{\bfp}{{\mathbf{p}}}
+\newcommand{\bfQ}{{\mathbf{Q}}}
+\newcommand{\bfq}{{\mathbf{q}}}
+\newcommand{\bfR}{{\mathbf{R}}}
+\newcommand{\bfr}{{\mathbf{r}}}
+\newcommand{\bfS}{{\mathbf{S}}}
+\newcommand{\bfs}{{\mathbf{s}}}
+\newcommand{\bfT}{{\mathbf{T}}}
+\newcommand{\bft}{{\mathbf{t}}}
+\newcommand{\bfU}{{\mathbf{U}}}
+\newcommand{\bfu}{{\mathbf{u}}}
+\newcommand{\bfV}{{\mathbf{V}}}
+\newcommand{\bfv}{{\mathbf{v}}}
+\newcommand{\bfW}{{\mathbf{W}}}
+\newcommand{\bfw}{{\mathbf{w}}}
+\newcommand{\bfX}{{\mathbf{X}}}
+\newcommand{\bfx}{{\mathbf{x}}}
+\newcommand{\bfY}{{\mathbf{Y}}}
+\newcommand{\bfy}{{\mathbf{y}}}
+\newcommand{\bfZ}{{\mathbf{Z}}}
+\newcommand{\bfz}{{\mathbf{z}}}
+
+
+\newcommand{\sfA}{{\mathsf{A}}}
+\newcommand{\sfa}{{\mathsf{a}}}
+\newcommand{\sfB}{{\mathsf{B}}}
+\newcommand{\sfb}{{\mathsf{b}}}
+\newcommand{\sfC}{{\mathsf{C}}}
+\newcommand{\sfc}{{\mathsf{c}}}
+\newcommand{\sfD}{{\mathsf{D}}}
+\newcommand{\sfd}{{\mathsf{d}}}
+\newcommand{\sfE}{{\mathsf{E}}}
+\newcommand{\sfe}{{\mathsf{e}}}
+\newcommand{\sfF}{{\mathsf{F}}}
+\newcommand{\sff}{{\mathsf{f}}}
+\newcommand{\sfG}{{\mathsf{G}}}
+\newcommand{\sfg}{{\mathsf{g}}}
+\newcommand{\sfH}{{\mathsf{H}}}
+\newcommand{\sfh}{{\mathsf{h}}}
+\newcommand{\sfI}{{\mathsf{I}}}
+\newcommand{\sfi}{{\mathsf{i}}}
+\newcommand{\sfJ}{{\mathsf{J}}}
+\newcommand{\sfj}{{\mathsf{j}}}
+\newcommand{\sfK}{{\mathsf{K}}}
+\newcommand{\sfk}{{\mathsf{k}}}
+\newcommand{\sfL}{{\mathsf{L}}}
+\newcommand{\sfl}{{\mathsf{l}}}
+\newcommand{\sfM}{{\mathsf{M}}}
+\newcommand{\sfm}{{\mathsf{m}}}
+\newcommand{\sfN}{{\mathsf{N}}}
+\newcommand{\sfn}{{\mathsf{n}}}
+\newcommand{\sfO}{{\mathsf{O}}}
+\newcommand{\sfo}{{\mathsf{o}}}
+\newcommand{\sfP}{{\mathsf{P}}}
+\newcommand{\sfp}{{\mathsf{p}}}
+\newcommand{\sfQ}{{\mathsf{Q}}}
+\newcommand{\sfq}{{\mathsf{q}}}
+\newcommand{\sfR}{{\mathsf{R}}}
+\newcommand{\sfr}{{\mathsf{r}}}
+\newcommand{\sfS}{{\mathsf{S}}}
+\newcommand{\sfs}{{\mathsf{s}}}
+\newcommand{\sfT}{{\mathsf{T}}}
+\newcommand{\sft}{{\mathsf{t}}}
+\newcommand{\sfU}{{\mathsf{U}}}
+\newcommand{\sfu}{{\mathsf{u}}}
+\newcommand{\sfV}{{\mathsf{V}}}
+\newcommand{\sfv}{{\mathsf{v}}}
+\newcommand{\sfW}{{\mathsf{W}}}
+\newcommand{\sfw}{{\mathsf{w}}}
+\newcommand{\sfX}{{\mathsf{X}}}
+\newcommand{\sfx}{{\mathsf{x}}}
+\newcommand{\sfY}{{\mathsf{Y}}}
+\newcommand{\sfy}{{\mathsf{y}}}
+\newcommand{\sfZ}{{\mathsf{Z}}}
+\newcommand{\sfz}{{\mathsf{z}}}
 
 
 \newcommand{\kk}{{\mathsf{k}}}
