change \bbz to \bbZ, still has conflict

--- a/template/notation.tex
+++ b/template/notation.tex
@@ -1,59 +1,110 @@
 %一些常用的宏定义
-\newcommand{\bba}{{\mathbb{A}}}
-\newcommand{\bbb}{{\mathbb{B}}}
-\newcommand{\bbc}{{\mathbb{C}}}
-\newcommand{\bbd}{{\mathbb{D}}}
-\newcommand{\bbe}{{\mathbb{E}}}
-\newcommand{\bbf}{{\mathbb{F}}}
-\newcommand{\bbg}{{\mathbb{G}}}
-\newcommand{\bbh}{{\mathbb{H}}}
-\newcommand{\bbi}{{\mathbb{I}}}
-\newcommand{\bbj}{{\mathbb{J}}}
-\newcommand{\bbk}{{\mathbb{K}}}
-\newcommand{\bbl}{{\mathbb{L}}}
-\newcommand{\bbm}{{\mathbb{M}}}
-\newcommand{\bbn}{{\mathbb{N}}}
-\newcommand{\bbo}{{\mathbb{O}}}
-\newcommand{\bbp}{{\mathbb{P}}}
-\newcommand{\bbq}{{\mathbb{Q}}}
-\newcommand{\bbr}{{\mathbb{R}}}
-\newcommand{\bbs}{{\mathbb{S}}}
-\newcommand{\bbt}{{\mathbb{T}}}
-\newcommand{\bbu}{{\mathbb{U}}}
-\newcommand{\bbv}{{\mathbb{V}}}
-\newcommand{\bbw}{{\mathbb{W}}}
-\newcommand{\bbx}{{\mathbb{X}}}
-\newcommand{\bby}{{\mathbb{Y}}}
-\newcommand{\bbz}{{\mathbb{Z}}}
+\newcommand{\bbA}{{\mathbb{A}}}
+\newcommand{\bba}{{\mathbb{a}}}
+\newcommand{\bbB}{{\mathbb{B}}}
+\newcommand{\bbb}{{\mathbb{b}}}
+\newcommand{\bbC}{{\mathbb{C}}}
+\newcommand{\bbc}{{\mathbb{c}}}
+\newcommand{\bbD}{{\mathbb{D}}} 
+\newcommand{\bbd}{{\mathbb{d}}}
+\newcommand{\bbE}{{\mathbb{E}}}
+\newcommand{\bbe}{{\mathbb{e}}}
+\newcommand{\bbF}{{\mathbb{F}}}
+\newcommand{\bbf}{{\mathbb{f}}}
+\newcommand{\bbG}{{\mathbb{G}}}
+\newcommand{\bbg}{{\mathbb{g}}}
+\newcommand{\bbH}{{\mathbb{H}}}
+\newcommand{\bbh}{{\mathbb{h}}}
+\newcommand{\bbI}{{\mathbb{I}}}
+\newcommand{\bbi}{{\mathbb{i}}}
+\newcommand{\bbJ}{{\mathbb{J}}}
+\newcommand{\bbj}{{\mathbb{j}}}
+\newcommand{\bbK}{{\mathbb{K}}}
+\newcommand{\bbk}{{\mathbb{k}}}
+\newcommand{\bbL}{{\mathbb{L}}}
+\newcommand{\bbl}{{\mathbb{l}}}
+\newcommand{\bbM}{{\mathbb{M}}}
+\newcommand{\bbm}{{\mathbb{m}}}
+\newcommand{\bbN}{{\mathbb{N}}}
+\newcommand{\bbn}{{\mathbb{n}}}
+\newcommand{\bbO}{{\mathbb{O}}}
+\newcommand{\bbo}{{\mathbb{o}}}
+\newcommand{\bbP}{{\mathbb{P}}}
+\newcommand{\bbp}{{\mathbb{p}}}
+\newcommand{\bbQ}{{\mathbb{Q}}}
+\newcommand{\bbq}{{\mathbb{q}}}
+\newcommand{\bbR}{{\mathbb{R}}}
+\newcommand{\bbr}{{\mathbb{r}}}
+\newcommand{\bbS}{{\mathbb{S}}}
+\newcommand{\bbs}{{\mathbb{s}}}
+\newcommand{\bbT}{{\mathbb{T}}}
+\newcommand{\bbt}{{\mathbb{t}}}
+\newcommand{\bbU}{{\mathbb{U}}}
+\newcommand{\bbu}{{\mathbb{u}}}
+\newcommand{\bbV}{{\mathbb{V}}}
+\newcommand{\bbv}{{\mathbb{v}}}
+\newcommand{\bbW}{{\mathbb{W}}}
+\newcommand{\bbw}{{\mathbb{w}}}
+\newcommand{\bbX}{{\mathbb{X}}}
+\newcommand{\bbx}{{\mathbb{x}}}
+\newcommand{\bbY}{{\mathbb{Y}}}
+\newcommand{\bby}{{\mathbb{y}}}
+\newcommand{\bbZ}{{\mathbb{Z}}}
+\newcommand{\bbz}{{\mathbb{z}}}
+\newcommand{\bbone}{{\mathbb{1}}}
 
-
-\newcommand{\cala}{{\mathcal{A}}}
-\newcommand{\calb}{{\mathcal{B}}}
-\newcommand{\calc}{{\mathcal{C}}}
-\newcommand{\cald}{{\mathcal{D}}}
-\newcommand{\cale}{{\mathcal{E}}}
-\newcommand{\calf}{{\mathcal{F}}}
-\newcommand{\calg}{{\mathcal{G}}}
-\newcommand{\calh}{{\mathcal{H}}}
-\newcommand{\cali}{{\mathcal{I}}}
-\newcommand{\calj}{{\mathcal{J}}}
-\newcommand{\calk}{{\mathcal{K}}}
-\newcommand{\call}{{\mathcal{L}}}
-\newcommand{\calm}{{\mathcal{M}}}
-\newcommand{\caln}{{\mathcal{N}}}
-\newcommand{\calo}{{\mathcal{O}}}
-\newcommand{\calp}{{\mathcal{P}}}
-\newcommand{\calq}{{\mathcal{Q}}}
-\newcommand{\calr}{{\mathcal{R}}}
-\newcommand{\cals}{{\mathcal{S}}}
-\newcommand{\calt}{{\mathcal{T}}}
-\newcommand{\calu}{{\mathcal{U}}}
-\newcommand{\calv}{{\mathcal{V}}}
-\newcommand{\calw}{{\mathcal{W}}}
-\newcommand{\calx}{{\mathcal{X}}}
-\newcommand{\caly}{{\mathcal{Y}}}
-\newcommand{\calz}{{\mathcal{Z}}}
-
+\newcommand{\calA}{{\mathcal{A}}}
+\newcommand{\cala}{{\mathcal{a}}}
+\newcommand{\calB}{{\mathcal{B}}}
+\newcommand{\calb}{{\mathcal{b}}}
+\newcommand{\calC}{{\mathcal{C}}}
+\newcommand{\calc}{{\mathcal{c}}}
+\newcommand{\calD}{{\mathcal{D}}}
+\newcommand{\cald}{{\mathcal{d}}}
+\newcommand{\calE}{{\mathcal{E}}}
+\newcommand{\cale}{{\mathcal{e}}}
+\newcommand{\calF}{{\mathcal{F}}}
+\newcommand{\calf}{{\mathcal{f}}}
+\newcommand{\calG}{{\mathcal{G}}}
+\newcommand{\calg}{{\mathcal{g}}}
+\newcommand{\calH}{{\mathcal{H}}}
+\newcommand{\calh}{{\mathcal{h}}}
+\newcommand{\calI}{{\mathcal{I}}}
+\newcommand{\cali}{{\mathcal{i}}}
+\newcommand{\calJ}{{\mathcal{J}}}
+\newcommand{\calj}{{\mathcal{j}}}
+\newcommand{\calK}{{\mathcal{K}}}
+\newcommand{\calk}{{\mathcal{k}}}
+\newcommand{\calL}{{\mathcal{L}}}
+\newcommand{\call}{{\mathcal{l}}}
+\newcommand{\calM}{{\mathcal{M}}}
+\newcommand{\calm}{{\mathcal{m}}}
+\newcommand{\calN}{{\mathcal{N}}}
+\newcommand{\caln}{{\mathcal{n}}}
+\newcommand{\calO}{{\mathcal{O}}}
+\newcommand{\calo}{{\mathcal{o}}}
+\newcommand{\calP}{{\mathcal{P}}}
+\newcommand{\calp}{{\mathcal{p}}}
+\newcommand{\calQ}{{\mathcal{Q}}}
+\newcommand{\calq}{{\mathcal{q}}}
+\newcommand{\calR}{{\mathcal{R}}}
+\newcommand{\calr}{{\mathcal{r}}}
+\newcommand{\calS}{{\mathcal{S}}}
+\newcommand{\cals}{{\mathcal{s}}}
+\newcommand{\calT}{{\mathcal{T}}}
+\newcommand{\calt}{{\mathcal{t}}}
+\newcommand{\calU}{{\mathcal{U}}}
+\newcommand{\calu}{{\mathcal{u}}}
+\newcommand{\calV}{{\mathcal{V}}}
+\newcommand{\calv}{{\mathcal{v}}}
+\newcommand{\calW}{{\mathcal{W}}}
+\newcommand{\calw}{{\mathcal{w}}}
+\newcommand{\calX}{{\mathcal{X}}}
+\newcommand{\calx}{{\mathcal{x}}}
+\newcommand{\calY}{{\mathcal{Y}}}
+\newcommand{\caly}{{\mathcal{y}}}
+\newcommand{\calZ}{{\mathcal{Z}}}
+\newcommand{\calz}{{\mathcal{z}}}
 
 \newcommand{\frakA}{{\mathfrak{A}}}
 \newcommand{\fraka}{{\mathfrak{a}}}
@@ -108,7 +159,6 @@
 \newcommand{\frakZ}{{\mathfrak{Z}}}
 \newcommand{\frakz}{{\mathfrak{z}}}
 
-
 \newcommand{\rmA}{{\mathrm{A}}}
 \newcommand{\rma}{{\mathrm{a}}}
 \newcommand{\rmB}{{\mathrm{B}}}
@@ -160,7 +210,6 @@
 \newcommand{\rmY}{{\mathrm{Y}}}
 \newcommand{\rmy}{{\mathrm{y}}}
 \newcommand{\rmZ}{{\mathrm{Z}}}
-
 
 \newcommand{\bfA}{{\mathbf{A}}}
 \newcommand{\bfa}{{\mathbf{a}}}
@@ -214,7 +263,6 @@
 \newcommand{\bfy}{{\mathbf{y}}}
 \newcommand{\bfZ}{{\mathbf{Z}}}
 \newcommand{\bfz}{{\mathbf{z}}}
-
 
 \newcommand{\sfA}{{\mathsf{A}}}
 \newcommand{\sfa}{{\mathsf{a}}}
@@ -270,11 +318,10 @@
 \newcommand{\sfz}{{\mathsf{z}}}
 
 
-\newcommand{\kk}{{\mathsf{k}}}
-\newcommand{\exk}{{\mathsf{l}}}
-\newcommand{\kkk}{{\mathbf{k}}}
-\newcommand{\KK}{{\mathsf{K}}}
-\newcommand{\KKK}{{\mathbf{K}}}
+\newcommand{\kk}{{\mathbf{k}}}
+\newcommand{\kkk}{{\mathbb{k}}}
+\newcommand{\KK}{{\mathbf{K}}}
+\newcommand{\KKK}{{\mathbb{K}}}
 \newcommand{\rkk}{{\kappa}} % residue field
 \newcommand{\fkk}{{\mathscr{K}}} % fraction field
 
