--- a/template/noteformyself.cls
+++ b/template/noteformyself.cls
@@ -63,14 +63,13 @@
 \RequirePackage{framed}         % 边框环境
 \RequirePackage{amsmath,amsthm,amssymb,amsfonts} % 数学公式基础包
 \RequirePackage{thmtools}       % 高级定理工具包（提供declaretheorem）
-% \RequirePackage[noabbrev, notcolon]{mathtools}      % 数学公式增强包
-% \RequirePackage{mathrsfs}       % 数学特殊字体
+\RequirePackage[noabbrev, notcolon]{mathtools}      % 数学公式增强包
 \RequirePackage[dvipsnames]{xcolor} % 颜色支持
 \RequirePackage[most]{tcolorbox} % 彩色盒子环境
 \RequirePackage{tikz}           % 矢量绘图
 \RequirePackage{tikz-cd}        % 交换图绘制
 \RequirePackage[all]{xy}        % 交换图绘制
-\RequirePackage{bbm}            % 黑板粗体数字
+% \RequirePackage{bbm}            % 黑板粗体数字
 \RequirePackage{enumitem}       % Required for custom labels
 
 % 中文支持
@@ -79,12 +78,16 @@
 
 % Unicode数学字体支持
 \RequirePackage{unicode-math}  
-% 设置数学字体
-\setmathfont{XITS Math} % like scr, support lowercase
+% 设置数学字体, needs to load the main font first
+\setmathfont{Cambria Math}  % like cal, support lowercase, seems only available in Windows
+\setmathfont{STIX Two Math}[range=cal] % like cal, support lowercase
+\setmathfont{Libertinus Math}[range=scr] % like scr, support lowercase
+% \setmathfont{XITS Math}[range=scr] % like scr, support lowercase
 % \setmathfont{TeX Gyre Termes Math}[range=scr] % like scr, support lowercase 
-% \setmathfont{Latin Modern Math}[range=cal]  % like cal, do not support lowercase
-\setmathfont{Cambria Math}[range=cal]  % like cal, support lowercase, seems only available in Windows
+% \setmathfont{Latin Modern Math}  % like cal, do not support lowercase
 % \setmathfont{Asana Math}[range=scr] % like scr, support lowercase
+% \setmathfont{Fira Math} % like sf, lack many fonts
+
 
 % 引用系统
 \RequirePackage[backend=biber,style=alphabetic, backref=true]{biblatex} % 参考文献管理
